--- a/src/hesai_lidar_ws/CMakeLists.txt
+++ b/src/hesai_lidar_ws/CMakeLists.txt
@@ -250,6 +250,7 @@ endif()
   install(DIRECTORY
           launch
           rviz
+          config
           DESTINATION share/${PROJECT_NAME})
 
   ament_package()
