--- a/src/hesai_lidar_ws/config/go2_config.yaml
+++ b/src/hesai_lidar_ws/config/go2_config.yaml
@@ -5,14 +5,14 @@ lidar:
       # 根据 source_type 的不同，填写对应的配置块（lidar_udp_type, pcap_type, serial_type）
 
       lidar_udp_type:
-        device_ip_address: 192.168.1.201 # 激光雷达设备的 IP 地址（主机接收 IP，为空时使用 UDP 点云的源 IP）
+        device_ip_address: "" # 激光雷达设备的 IP 地址（主机接收 IP，为空时使用 UDP 点云的源 IP）
         udp_port: 2368 # UDP 接收端口号
         ptc_port: 9347 # PTC 端口号，用于与激光雷达通信
         multicast_ip_address: 255.255.255.255 # 组播 IP 地址
 
-        use_ptc_connected: true # 是否使用 PTC 连接（设为 false 表示不使用）
-        correction_file_path: "Your correction file path" # 校正文件的路径
-        firetimes_path: "Your firetime file path" # 点火时间文件的路径
+        use_ptc_connected: false # 设为 false 表示不使用 PTC 连接，适合 Go2 集成
+        correction_file_path: "" # 校正文件的路径
+        firetimes_path: "" # 点火时间文件的路径
 
         use_someip: false # 是否使用 SOME/IP 协议
         host_ip_address: "" # 主机 IP 地址（当使用 SOME/IP 时配置）
@@ -27,23 +27,23 @@ lidar:
         caFile: "" # CA 证书文件路径
 
       pcap_type:
-        pcap_path: "Your pcap file" # pcap 文件路径
-        correction_file_path: "Your correction file path" # 校正文件路径
-        firetimes_path: "Your firetime file path" # 点火时间文件路径
+        pcap_path: "" # pcap 文件路径
+        correction_file_path: "" # 校正文件路径
+        firetimes_path: "" # 点火时间文件路径
 
         pcap_play_synchronization: true # 是否同步播放 pcap 数据（与主机时间同步）
         pcap_play_in_loop: false # 是否循环播放 pcap 文件
 
       rosbag_type:
-        correction_file_path: "Your correction file path" # 校正文件路径
-        firetimes_path: "Your firetime file path" # 点火时间文件路径
+        correction_file_path: "" # 校正文件路径
+        firetimes_path: "" # 点火时间文件路径
 
       serial_type:
-        rs485_com: "Your serial port name for receiving point cloud" # 接收点云数据的串口名称（如使用 JT16）
-        rs232_com: "Your serial port name for sending cmd" # 发送指令的串口名称
+        rs485_com: "" # 接收点云数据的串口名称（如使用 JT16）
+        rs232_com: "" # 发送指令的串口名称
         point_cloud_baudrate: 3125000 # 点云波特率
         correction_save_path: "" # 校正文件保存路径（用于存储激光雷达角度校正文件）
-        correction_file_path: "Your correction file path" # 校正文件路径
+        correction_file_path: "" # 校正文件路径
 
       # 公共模块配置
       use_timestamp_type: 0 # 时间戳类型：0 表示使用点云自带时间戳，1 表示使用接收时间戳
@@ -73,12 +73,8 @@ lidar:
       ros_recv_packet_topic: /lidar_packets # 用于从 rosbag 接收原始数据包的主题
       ros_send_packet_topic: /lidar_packets # 用于通过 ROS 发送原始数据包的主题
       ros_send_point_cloud_topic: /point_cloud2 # 用于通过 ROS 发送点云数据的主题，与 Go2 系统兼容
-      ros_send_imu_topic: /lidar_imu # 用于通过 ROS 发送 IMU 数据的主题
+      ros_send_imu_topic: /imu # 用于通过 ROS 发送 IMU 数据的主题，与 Go2 系统兼容
       ros_send_packet_loss_topic: /lidar_packets_loss # 用于监控丢包情况的主题
-      # ros_recv_correction_topic: /lidar_corrections # 用于从 rosbag 接收校正文件的主题（已注释）
-      # ros_send_correction_topic: /lidar_corrections # 用于通过 ROS 发送校正文件的主题（已注释）
-      # ros_send_firetime_topic: /lidar_firetime # 用于发送点火时间的主题（已注释）
-      # ros_send_ptp_topic: /lidar_ptp # 用于发送 PTP 锁定状态和偏移量的主题（已注释）
       send_packet_ros: false # 是否通过 ROS 发送原始数据包
       send_point_cloud_ros: true # 是否通过 ROS 发送点云数据
-      send_imu_ros: true # 是否通过 ROS 发送 IMU 数据
+      send_imu_ros: false # 关闭 IMU 数据发送，因为 Go2 有自己的 IMU
